--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <div class="bottom-container">
-          <a class="footer-link" href="https://www.linkedin.com/in/turlapati-joel-09176a23b/">LinkedIn</a>
+          <a class="footer-link" href="https://www.linkedin.com/in/joelturlapati/">LinkedIn</a>
 
           <a class="footer-link" href="https://joelturlapati.github.io/cv/">Website</a>
           <p>© Joel Turlapati.</p>
