--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p>Good experience with C,Python,Java.</p>
             </div>
             <div class="skill-row2">
-              <img class="skill-img2" src="images/chillies.png" alt="">
+              <img class="skill-img2" src="images/website.png" alt="">
               <h3>Design&Develop</h3>
               <p>Designed and developed few websites myself.</p>
             </div>
